Cleanup CSS a bit and add some curves to make things look more modern :)

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     width : 90%;
     margin: 0 auto;
     min-width : 1000;
-    max-width : 1920;
+    max-width : 1600;
 }
 
 /*   BANNER    */
@@ -12,11 +12,12 @@
     background : #01623B;
     height : 200px;
     position : relative;
-    padding-left : 35px;
+    padding-left : 55px;
     
     border-style : outset;
     border-width : 1px;
     border-color : #01522B;
+    border-radius: 15px 15px 5px 5px;
 }
 
 #svg_circuit {
@@ -32,14 +33,14 @@
     font-size : 35px;
     color : #DDDDDD;
     top : 80px;
-    left : 75px;
+    left : 95px;
     width : 335px;
     height : 40px;
     text-align : center;
     border-style : outset;
     border-width : 3px;
-    border-color : #222222;
-    background : #444444;
+    border-color : #333333;
+    background : #555555;
 }
 
 
@@ -49,6 +50,8 @@
     background : #36D695;
     padding : 0;
     margin-top : 2px;
+
+    border-radius: 5px 5px 10px 10px;
 }
 
 .navbar_table {
@@ -113,6 +116,7 @@
     padding-left : 10px;
     padding-right : 10px;
     min-height : 600px;
+    border-color : #BBBBBB;
     border-left-style : solid;
     border-left-width : 1px;
     border-right-style : solid;
@@ -128,7 +132,7 @@
 #footer {
     width : 100%;
     height : auto;
-    background : #888888;
+    background : #CCCCCC;
     font-size : 12px;
     padding : 1px;
 }
