Add remote outlet project

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -141,6 +141,7 @@
             Projects
           </a>
             <ul>
+                <li class="submenu_item"><a href="/projects/remote_outlet.html">Remote Switched Outlet</a></li>
                 <li class="submenu_item"><a href="/projects/power_supply.html">Bench Power Supply</a></li>
                 <li class="submenu_item"><a href="/projects/pcb_clock.html">PCB Alarm Clock</a></li>
                 <li class="submenu_item"><a href="/projects/night_vision.html">Night Vision Goggles</a></li>
