Add evolution simulation project to website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -141,15 +141,10 @@
             Projects
           </a>
             <ul>
+                <li class="submenu_item"><a href="/projects/evolution_sim.html">Evolution Sim Display</a></li>
                 <li class="submenu_item"><a href="/projects/remote_outlet.html">Remote Switched Outlet</a></li>
                 <li class="submenu_item"><a href="/projects/power_supply.html">Bench Power Supply</a></li>
                 <li class="submenu_item"><a href="/projects/pcb_clock.html">PCB Alarm Clock</a></li>
-                <li class="submenu_item"><a href="/projects/night_vision.html">Night Vision Goggles</a></li>
-                <li class="submenu_item"><a href="/projects/desk.html">Motorized Desk</a></li>
-                <li class="submenu_item"><a href="/projects/IR_recorder.html">IR Recorder</a></li>
-                <li class="submenu_item"><a href="/projects/home_automation_v2.html">Home Automation V2</a></li>
-                <li class="submenu_item"><a href="/projects/internet_robot.html">Internet Robot</a></li>
-                <li class="submenu_item"><a href="/projects/N64_mod.html">N64 Mod</a></li>
                 <li class="submenu_item"><a href="/projects.html">. . .</a></li>
             </ul>
         </td>
