--- a/projects/project_pages.css
+++ b/projects/project_pages.css
@@ -45,14 +45,21 @@
 
 img.section_image {
     padding-left : 1em;
-		width : 100%;
-		margin : 0px;
-        max-width : 750px;
+    width : 100%;
+    margin : 0px;
+    max-width : 750px;
 }
 
 td.section_image {
     padding-left : 1em;
-		width : 100%;
+	width : 100%;
+}
+
+video.section_image {
+    padding-left : 1em;
+    width : 100%;
+    margin : 0px;
+    max-width : 750px;
 }
 
 
